docs: add user guide for Micro Frontend (@umijs/plugin-qiankun) (#622)
* docs(data-flow): add data-flow intro & update i18n intro

* docs(data-flow): polishing document

* docs(data-flow): polishing docs

* docs(micro-frontend): add user guide for micro frontend

* docs: fix a dot

* docs(micro-frontend): fix words

* docs: change config file to .umirc.ts

* docs(micro-frontend): support new version of plugin

* docs(micro-frontend): revert enable param & update api

--- a/docs/docs/max/i18n.md
+++ b/docs/docs/max/i18n.md
@@ -24,7 +24,7 @@ src
   pages
 ```
 
-在 `config/config.ts` 中配置国际化插件：
+在 `.umirc.ts` 中配置国际化插件：
 
 ```ts
 export default {
@@ -403,7 +403,7 @@ setLocale('en-US', false);
 
 ## 配置插件
 
-您可以在 `config/config.ts` 中配置国际化插件。默认值如下：
+您可以在 `.umirc.ts` 中配置国际化插件。默认值如下：
 
 ```ts
 export default {
@@ -451,10 +451,10 @@ export default {
 };
 ```
 
-配置路由内容如下：
+配置 Umi 的路由如下：
 
 ```ts
-// config/routes.ts
+// .umirc.ts
 export default {
   title: 'site.title',
   routes: [
