fix(plugin-docs): fix docs children & update plugin (#631)

--- a/docs/docs/max/i18n.md
+++ b/docs/docs/max/i18n.md
@@ -8,7 +8,7 @@ import { Message } from 'umi';
 
 国际化插件采用约定式目录结构，我们约定在 `src/locales` 目录下引入多语言文件。
 
-<Message emoji="💡">
+<Message>
 如果 Umi 项目配置了 `singular: true`，则应当使用 `src/locale` 作为存放多语言文件的目录。
 </Message>
 
