bigfish 文档修改反向同步到 umi (#731)
* docs: 📝  介绍调整位置

* refactor: 🎨 用词修改

* chore: ✏️ capital case

* docs: 📝  use quote

* chore: ✏️  格式调整

* chore: ✏️ 大小写调整

* chore: 🎨 prettier

* docs: 📝  prettier

* docs: 📝 data-flow 更新

* docs: 📝 调整 i18n 文档

* refactor: 🔥 remove extra space

Co-authored-by: pshu <pishu.spf@antfin.com>

--- a/docs/docs/max/i18n.md
+++ b/docs/docs/max/i18n.md
@@ -2,15 +2,11 @@ import { Message } from 'umi';
 
 # 国际化
 
-`@umi/max` 内置了**国际化**插件 [`@umijs/plugin-locale`](https://github.com/umijs/umi-next/blob/master/packages/plugins/src/locale.ts)，它可以轻松地将国际化功能集成到你的 Umi 应用程序之中。
+`@umi/max` 内置了[国际化插件](https://github.com/umijs/umi-next/blob/master/packages/plugins/src/locale.ts)，它可以轻松地将国际化功能集成到你的 Umi 应用程序之中。
 
 ## 开始使用
 
 国际化插件采用约定式目录结构，我们约定在 `src/locales` 目录下引入多语言文件。
-
-<Message>
-如果 Umi 项目配置了 `singular: true`，则应当使用 `src/locale` 作为存放多语言文件的目录。
-</Message>
 
 多语言文件的命名需遵循此规范：`<lang><separator><COUNTRY>.(js|json|ts)`。其中，`<separator>` 为分隔符，默认为 `-`，可以通过 `baseSeparator` 项配置。
 
@@ -451,7 +447,7 @@ export default {
 };
 ```
 
-配置 Umi 的路由如下：
+配置路由内容如下：
 
 ```ts
 // .umirc.ts
