feat(plugin-docs): add article footer meta & update layout & modify colors

--- a/docs/locales/zh-CN.json
+++ b/docs/locales/zh-CN.json
@@ -2,5 +2,11 @@
   "Search anything ...": "搜索任何内容 ...",
   "Docs": "文档",
   "Blog": "博客",
-  "No result for": "没有结果"
+  "No result for": "没有结果",
+  "Edit this page": "编辑此页",
+  "Last Updated": "上次更新",
+  "Created At": "创建时间",
+  "Contributors": "贡献者",
+  "commit": "次提交",
+  "commits": "次提交"
 }
