--- a/docs/blog/umi-4-rc.mdx
+++ b/docs/blog/umi-4-rc.mdx
@@ -9,7 +9,8 @@
   <br />
   🎭 双构建引擎和 ESMi
   <br />
-  🕸 Webpack 5<br />
+  🕸 Webpack 5
+  <br />
   ⛹🏾‍♂️ React Router 6 & 新路由
   <br />
   🐹 最佳实践迭代
