--- a/docs/blog/mfsu-faster-than-vite.mdx
+++ b/docs/blog/mfsu-faster-than-vite.mdx
@@ -6,7 +6,7 @@
   中默认开启，适用于既要 Webpack 功能与生态，又想要 Vite 速度的同学们。
 </p>
 
-Umi 4 中同时支持 webpack 和 vite 两种构建方式，跑通了后，迫不及待对比了 Vite 和 Webpack + MFSU 的效果，结果有点意外。关于什么是 MFSU，我在《SEE Conf: Umi 4 设计思路文字稿》中有一段详细介绍。
+Umi 4 中同时支持 webpack 和 vite 两种构建方式，跑通了后，迫不及待对比了 Vite 和 Webpack + MFSU 的效果，结果有点意外。关于什么是 MFSU，我在[《SEE Conf: Umi 4 设计思路文字稿》](https://mp.weixin.qq.com/s?__biz=MjM5NDgyODI4MQ%3D%3D&mid=2247484533&idx=1&sn=9b15a67b88ebc95476fce1798eb49146)中有一段详细介绍。
 
 <p>
   <span style={{ color: 'red', fontWeight: 'bold' }}>
