--- a/docs/blog/umi-4-rc.mdx
+++ b/docs/blog/umi-4-rc.mdx
@@ -48,11 +48,7 @@
 <p>
   <span style={{ color: 'red', fontWeight: 'bold' }}>MFSU V3 & 默认开启。</span>
   MFSU 更新了他的第三个大版本，如果你有用 Umi 3 内置的 MFSU
-  并遇到问题，建议重新尝试，这个版本有很多改进，解决基本所有之前可能会遇到的诡异问题，并且编译速度和页面打开速度都更快。昨天我还有写一篇
-  <a href="https://mp.weixin.qq.com/s?__biz=MjM5NDgyODI4MQ==&mid=2247484624&idx=1&sn=2addfa8cc2511fbea91faf831195788f">
-    《比 Vite 更快的 MFSU》
-  </a>
-  。基于此，我们自信地把这个功能在 Umi 4 中默认开启。还有值得一提的是，MFSU
+  并遇到问题，建议重新尝试，这个版本有很多改进，解决基本所有之前可能会遇到的诡异问题，并且编译速度和页面打开速度都更快。昨天我还有写一篇 [《比 Vite 更快的 MFSU》](https://mp.weixin.qq.com/s?__biz=MjM5NDgyODI4MQ==&mid=2247484624&idx=1&sn=2addfa8cc2511fbea91faf831195788f)。基于此，我们自信地把这个功能在 Umi 4 中默认开启。还有值得一提的是，MFSU
   可脱离 Umi 运行。
 </p>
 
